--- a/org.idempiere.mfg2/pom.xml
+++ b/org.idempiere.mfg2/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.idempiere</groupId>
 		<artifactId>org.idempiere.parent</artifactId>
-		<version>7.1.0-SNAPSHOT</version>
 		<relativePath>../../idempiere/org.idempiere.parent/pom.xml</relativePath>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>org.idempiere.mfg2</artifactId>
 	<packaging>eclipse-plugin</packaging>
